@@ -1,24 +1,0 @@
-<!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" href="../../../../../../../Source/ThirdParty/qunit/qunit/qunit.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
-<script src="../../../../../../../Source/ThirdParty/qunit/qunit/qunit.js"></script>
-</head>
-<body>
-<h1 id="qunit-header">Gardening Server JavaScript Unit Tests</h1>
-<h2 id="qunit-banner"></h2>
-<div id="qunit-testrunner-toolbar"></div>
-<h2 id="qunit-userAgent"></h2>
-<ol id="qunit-tests"></ol>
-<script src="config.js"></script>
-<script src="base.js"></script>
-<script src="base_unittests.js"></script>
-<script src="checkout.js"></script>
-<script src="checkout_unittests.js"></script>
-<script src="results.js"></script>
-<script src="results_unittests.js"></script>
-<script src="ui.js"></script>
-<script src="ui_unittests.js"></script>
-</body>
-</html>
