@@ -38,5 +38,15 @@
 
 <script src="Builder.js"></script>
 <script src="Builder_unittests.js"></script>
+
+<script src="config.js"></script>
+<script src="base.js"></script>
+<script src="base_unittests.js"></script>
+<script src="checkout.js"></script>
+<script src="checkout_unittests.js"></script>
+<script src="results.js"></script>
+<script src="results_unittests.js"></script>
+<script src="ui.js"></script>
+<script src="ui_unittests.js"></script>
 </body>
 </html>
